new: AJAX refresh for progress badges

--- a/read_comics/issues/templates/issues/blocks/finished_progress.html
+++ b/read_comics/issues/templates/issues/blocks/finished_progress.html
@@ -1,6 +1,6 @@
 {% load humanize %}
 {% if request.user.is_authenticated %}
-  <div class="card">
+  <div class="card progress-report-card">
     <div class="card-body">
       {% if base_object %}
         <h5><a href="{{ base_object.get_absolute_url }}">{{ base_object.name }}</a> reading progress</h5>
