fix: Character page crush when character has no publisher

--- a/read_comics/characters/templates/characters/detail.html
+++ b/read_comics/characters/templates/characters/detail.html
@@ -204,7 +204,9 @@
                     <strong>Publisher: </strong>
                   </div>
                   <div class="col-12 col-md-8 col-fhd-9">
+                    {% if character.publisher %}
                     <a href="{% url "publishers:detail" character.publisher.slug %}">{{ character.publisher.name }}</a>
+                    {% endif %}
                   </div>
                 </div>
 
