--- a/read_comics/teams/templates/teams/detail.html
+++ b/read_comics/teams/templates/teams/detail.html
@@ -170,7 +170,9 @@
                     <strong>Publisher: </strong>
                   </div>
                   <div class="col-12 col-md-8 col-fhd-9">
+                    {% if team.publisher %}
                     <a href="{% url "publishers:detail" team.publisher.slug %}">{{ team.publisher.name }}</a>
+                    {% endif %}
                   </div>
                 </div>
 
