fix: Story arc page crush when story arc has no publisher

--- a/read_comics/story_arcs/templates/story_arcs/detail.html
+++ b/read_comics/story_arcs/templates/story_arcs/detail.html
@@ -238,7 +238,9 @@
                     <strong>Publisher: </strong>
                   </div>
                   <div class="col-12 col-md-8 col-fhd-9">
+                    {% if story_arc.publisher %}
                     <a href="{% url "publishers:detail" story_arc.publisher.slug %}">{{ story_arc.publisher.name }}</a>
+                    {% endif %}
                   </div>
                 </div>
 
