--- a/read_comics/templates/base.html
+++ b/read_comics/templates/base.html
@@ -125,7 +125,9 @@
 <!-- BEGIN: Footer-->
 <footer class="footer footer-static footer-light">
   <p class="clearfix mb-0">
-    <span class="float-left d-inline-block">2021 &copy; read-comics.net</span>
+    <span class="float-left d-inline-block">2021 &copy; read-comics.net. If you have any problem with this site please send email to<a
+      href="mailto:readcomicsnet@gmail.com">readcomicsnet@gmail.com</a></span>
+
     {#    <span class="float-right d-sm-inline-block d-none">#}
     {#      Crafted with<i class="bx bxs-heart pink mx-50 font-small-3"></i>by<a class="text-uppercase" href="https://1.envato.market/pixinvent_portfolio" target="_blank">Pixinvent</a>#}
     {#    </span>#}
