--- a/read_comics/issues/templates/issues/blocks/download_button.html
+++ b/read_comics/issues/templates/issues/blocks/download_button.html
@@ -1,8 +1,18 @@
 {#{% if request.user.is_authenticated %}#}
-  <li class="nav-item pb-1">
-    <a class="nav-link d-flex px-1 btn btn-info" id="download-link" href="{{ object.download_link }}">
-      <i class="fad fa-download"></i> <span
-      class="d-none d-md-block pl-50"> Download (~{{ issues_info.size|filesizeformat }})</span>
-    </a>
-  </li>
+<li class="nav-item pb-1">
+  <div class="dropdown">
+    <button class="btn btn-info d-flex nav-link dropdown-toggle" type="button" id="download-link" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+      <i class="fad fa-download"></i> <span class="d-none d-md-block pl-50"> Download (~{{ issues_info.size|filesizeformat }})</span>
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonIcon" style="">
+      <a class="dropdown-item" href="{{ object.download_link }}"><i class="fad fa-folder mr-1"></i> Grouped by publishers and volumes</a>
+      <a class="dropdown-item" href="{{ object.download_link }}?names=ordered"><i class="fad fa-sort-numeric-down mr-1"></i> Chronologically by cover date</a>
+    </div>
+  </div>
+
+  {#    <a class="nav-link d-flex px-1 btn btn-info" id="download-link" href="{{ object.download_link }}">#}
+  {#      <i class="fad fa-download"></i> <span class="d-none d-md-block pl-50"> Download (~{{ issues_info.size|filesizeformat }})</span>#}
+  {#    </a>#}
+</li>
 {#{% endif %}#}
